# mdnotes-cli

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  core.rs  main.rs  parser.rs  system.rs
src/core/: actions.rs  frontmatter.rs  io.rs  markdown.rs  utils.rs
src/core/actions/: config.rs  create.rs  edit.rs  list.rs  new.rs  notebook.rs  save.rs  stack.rs  switch.rs  view.rs
src/core/actions/list/: handlers.rs
src/core/actions/notebook/: create.rs  invariants.rs  remove.rs
src/core/actions/stack/: create.rs  invariants.rs  remove.rs
